support for binary attribute values in LDAP XPCOM SDK (bug 119380).  r=peterv@netscape.com, sr=sspitzer@netscape.com/mscott@netscape.com